--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <meta name="theme-color" content="#000000">
     <link href='https://fonts.googleapis.com/css?family=Lato:400' rel='stylesheet' type='text/css' />
 
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="./img/icon.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Game of Life</title>
+    <title>Conway's Game of Life</title>
   </head>
   <body>
     <noscript>
